[package]
name = "riscv-xdevs"
version = "0.1.0"
authors = ["Román Cárdenas"]
edition = "2021"
license = "ISC"
readme = "README.md"
rust-version = "1.59"

[dependencies]
embedded-hal = "0.2.7"
hifive1 = { git = "https://github.com/romancardenas/hifive1.git", features = ["board-redv", "v-extern"] }

panic-halt = "0.2.0"
riscv = "0.11.0"
riscv-rt = { version = "0.12.0", features = ["single-hart"] }
xdevs-no-std = "0.1.1"
portable-atomic = { version = "1.4", default-features = false, features = ["unsafe-assume-single-core"]  }
semihosting = { version = "0.1", features = ["stdio", "panic-handler"], optional = true }

[features]
qemu = ["semihosting"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
